--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 #org.springframework.data.rest.level=DEBUG
 #debug: true
-spring.data.neo4j.uri=bolt://localhost
+spring.data.neo4j.uri=bolt://ec2-52-90-58-108.compute-1.amazonaws.com
 spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=h4ckM3
+spring.data.neo4j.password=kotlin
 indexes.auto=assert
 
 
