--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 #spring.data.neo4j.driver=org.neo4j.ogm.drivers.embedded.driver.EmbeddedDriver
-
+#######################
+#Neo4j Config
+#######################
 #org.springframework.data.rest.level=DEBUG
 #debug: true
 spring.data.neo4j.uri=bolt://ec2-52-90-58-108.compute-1.amazonaws.com
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=kotlin
 indexes.auto=assert
-
-
-
-
+#######################
+#Twitter Client Config
+#######################
+twitter.consumerKey=fYndev50hdiFlfrRh8qPWRZhb
+twitter.consumerSecret=dtinjsIT67EWCWptfJuPgLq66QYi2C0wg8FoaeVLy0mqj5ps9a
+twitter.accessKey=858970508611604480-LosivYzdZNc6qC22ITSijY9iMJWKqq2
+twitter.accessSecret=CnzPoKPZgocRZsHg4vx8xiFuWEJcZaNXl12IvKjgEsWpb
+kudos.defaultImageUrl=https://cdn.worldvectorlogo.com/logos/kotlin.svg
+kudos.defaultDescription="Kotlin community member"
 
