--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,10 +1,13 @@
 buildscript {
     ext {
         kotlinVersion = '1.1.51'
-        springBootVersion = '1.5.3.RELEASE'
+        springBootVersion = '2.0.0.BUILD-SNAPSHOT'
     }
     repositories {
         mavenCentral()
+        mavenCentral()
+        maven { url "http://repo.spring.io/snapshot" }
+        maven { url "http://repo.spring.io/milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -41,31 +44,33 @@ repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "http://jcenter.bintray.com" }
-}
-
-springBoot {
-    mainClass = "kudos.ApplicationConfig"
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "http://repo.spring.io/snapshot" }
+    maven { url "http://repo.spring.io/milestone" }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
     compile "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}"
-    compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.6'
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-neo4j') {
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-neo4j', version: "${springBootVersion}") {
         exclude(module: 'neo4j-ogm-http-driver')
     }
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.4.4'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version: '4.2.4.RELEASE'
-    compile group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: '2.1.2'
+    compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.6'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: "${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
+    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:'5.0.1.RELEASE'
+    compile("org.neo4j:neo4j-ogm-core:3.0.1")
+    compile("org.neo4j:neo4j-ogm-api:3.0.1")
+    compile group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: '3.0.1'
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.8.5'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
         exclude(module: 'commons-logging')
     }
-    testCompile group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '2.1.2'
+    testCompile group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '3.0.1'
     testCompile group: 'org.neo4j', name: 'neo4j', version: '3.1.2'
     testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.4.0'
 }
