--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,9 +4,10 @@ buildscript {
         springBootVersion = '1.5.8.RELEASE'
     }
     repositories {
+        jcenter()
         mavenCentral()
-        maven { url "http://repo.spring.io/snapshot" }
         maven { url "http://repo.spring.io/milestone" }
+        maven { url "http://repo.spring.io/snapshot" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -40,9 +41,10 @@ noArg {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
-    maven { url "https://repo.spring.io/snapshot" }
-    maven { url "http://jcenter.bintray.com" }
+    maven { url "http://repo.spring.io/milestone" }
+    maven { url "http://repo.spring.io/snapshot" }
 }
 
 dependencies {
