--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlinVersion = '1.1.51'
-        springBootVersion = '2.0.0.BUILD-SNAPSHOT'
+        springBootVersion = '1.5.8.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -56,17 +56,17 @@ dependencies {
     compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.6'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: "${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
-    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:'5.0.1.RELEASE'
-    compile("org.neo4j:neo4j-ogm-core:3.0.1")
-    compile("org.neo4j:neo4j-ogm-api:3.0.1")
-    compile group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: '3.0.1'
+    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:'4.2.8.RELEASE'
+    compile("org.neo4j:neo4j-ogm-core:2.1.5")
+    compile("org.neo4j:neo4j-ogm-api:2.1.5")
+    compile group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: '2.1.5'
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.8.5'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
         exclude(module: 'commons-logging')
     }
-    testCompile group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '3.0.1'
+    testCompile group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '2.1.5'
     testCompile group: 'org.neo4j', name: 'neo4j', version: '3.1.2'
     testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.4.0'
 }
