--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,15 @@
   "name": "kudos",
   "version": "0.0.0",
   "main": "index.html",
-  "dependencies": {
-    "express": "^4.15.2",
-    "kotlin-compiler": "^1.1.51"
-  },
   "scripts": {
+    "postinstall": "bower install && gulp build",
+    "start": "node server.js",
     "test": "gulp test"
   },
-  "devDependencies": {
+  "dependencies": {
+    "bower": "^1.8.2",
+    "express": "^4.15.2",
+    "kotlin-compiler": "^1.1.51",
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
     "browser-sync": "~2.9.11",
@@ -18,7 +19,7 @@
     "del": "~2.0.2",
     "eslint-plugin-angular": "~0.12.0",
     "estraverse": "~4.1.0",
-    "gulp": "~3.9.0",
+    "gulp": "^3.9.1",
     "gulp-angular-filesort": "~1.1.1",
     "gulp-angular-templatecache": "~1.8.0",
     "gulp-autoprefixer": "~3.0.2",
@@ -57,6 +58,6 @@
     "wrench": "~1.5.8"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "~8.7.0"
   }
 }
